Compl. Refactor - Working Working checkpoint. Divided the code into components - chessboard and drawers which are composed of RowOfDragOverableCells. Pieces can kill the pieces of opposite color

--- a/src/Chessboard.css
+++ b/src/Chessboard.css
@@ -25,6 +25,15 @@
   background-color: #f0d9b5;
 }
 
-.highlighted {
+.drawer.black{
+  background-color: gray;
+}
+
+
+.highlighted, .drawer.black.highlighted{
   background-color: yellow;
+}
+
+.picked, .drawer.black.picked{
+  background-color: red;
 }
